update match endpoint
